--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,10 +2,10 @@
       <header class='fan'>Fan <span class='fury'>Fury</span></header>
 
       <div class='login card border-dark'>
-        <input class='rounded mb-2' type='text' placeholder='Username:' />
-        <input class='rounded' type='text' placeholder='Password:' />
+        <input class='rounded mb-2' type='text' placeholder='Username:' id="username-login" />
+        <input class='rounded' type='text' placeholder='Password:' id="password-login"/>
 
-        <button class='btn btn-dark m-auto mt-2 mb-2'>Login</button>
-        <button class='btn btn-dark m-auto'>Register</button>
+        <button class='btn btn-dark m-auto mt-2 mb-2' id="login-form">Login</button>
+        <button class='btn btn-dark m-auto' id="register-form">Register</button>
       </div>
     </div>
