--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,4 @@
-
-  <body>
-    <div class='accountregister'>
+<div class='accountregister'>
       <header class='accounthead'>Register For an Account</header>
       <div class='card register border-dark'>
         <input class='rounded mb-2' type='text' placeholder='Email:' />
@@ -29,8 +27,7 @@
         <button class='btn btn-success rounded'>Register</button>
       </div>
     </div>
-  </body>
-  <script src='/public/js/apiJava.js'></script>
+  <script src='/public/js/index.js'></script>
 </html>
 
 <textarea
