--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,10 @@
       integrity='sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi'
       crossorigin='anonymous'
     />
-    <link rel='stylesheet' href='/css/style.css' />
+    <link rel='stylesheet' href='./css/style.css' />
   </head>
   <body>
     {{{body}}}
   </body>
-  <script src='/js/login.js'></script>
+  <script src='/js/apiJava.js'></script>
 </html>
