--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -14,17 +14,7 @@
             placeholder='Tell us about yourself:'
           ></textarea>
         </div>
-        <input
-          class='rounded mb-2 pass2'
-          type='text'
-          placeholder='Password...Again:'
-        />
-        <input
-          class='rounded mb-2 pass3'
-          type='text'
-          placeholder='You guessed it...Password:'
-        />
-        <button class='btn btn-success rounded'>Register</button>
+        <button class='btn btn-success rounded' id="final-Register">Register</button>
       </div>
     </div>
   <script src='/public/js/index.js'></script>
