--- a/views/teamSelect.handlebars
+++ b/views/teamSelect.handlebars
@@ -35,7 +35,7 @@
           class='logo border rounded-circle'
           id='CIN'
           src='/images/cincinati=bengals-logo.jpg'
-          alt='Cincinati Bengals Logo'
+          alt='Cincinnati Bengals Logo'
         />
         <img
           class='logo border rounded-circle'
